@@ -7,7 +7,7 @@
  *      implementation of the pqxx::connection_base abstract base class.
  *   pqxx::connection_base encapsulates a frontend to backend connection
  *
- * Copyright (c) 2001-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -49,8 +49,10 @@
 #include "pqxx/nontransaction"
 #include "pqxx/pipeline"
 #include "pqxx/result"
+#include "pqxx/strconv"
 #include "pqxx/transaction"
 #include "pqxx/notify-listen"
+
 
 using namespace PGSTD;
 using namespace pqxx;
